--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,10 +17,13 @@ tauri-build = { version = "1", features = [] }
 tauri = { version = "1", features = [ "dialog-all"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio-postgres = "0.7.10"
+tokio-postgres =  { version = "0.7.10", features = ["with-chrono-0_4", "with-uuid-1"] }
 tokio = {version ="1", features = ["full"] }
-tempfile = "3.10.1"
 anyhow = "1.0.86"
+chrono = { version = "0.4" }
+uuid = { version = "1", features = ["v4"] }
+rust_decimal = { version = "^1", features = ["db-tokio-postgres"] }
+
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
